typescript/checker/tests/conformance/es6/Symbols/symbolType10.ts.stderr
error: TS2362 {
    span: Span {
        lo: BytePos(
            46,
        ),
        hi: BytePos(
            47,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolType10.ts:3:1
  |
3 | s & s;
  | ^

error: TS2363 {
    span: Span {
        lo: BytePos(
            50,
        ),
        hi: BytePos(
            51,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolType10.ts:3:5
  |
3 | s & s;
  |     ^

error: TS2362 {
    span: Span {
        lo: BytePos(
            53,
        ),
        hi: BytePos(
            54,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolType10.ts:4:1
  |
4 | s | s;
  | ^

error: TS2363 {
    span: Span {
        lo: BytePos(
            57,
        ),
        hi: BytePos(
            58,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolType10.ts:4:5
  |
4 | s | s;
  |     ^

error: TS2362 {
    span: Span {
        lo: BytePos(
            60,
        ),
        hi: BytePos(
            61,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolType10.ts:5:1
  |
5 | s ^ s;
  | ^

error: TS2363 {
    span: Span {
        lo: BytePos(
            64,
        ),
        hi: BytePos(
            65,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolType10.ts:5:5
  |
5 | s ^ s;
  |     ^

error: TS2362 {
    span: Span {
        lo: BytePos(
            68,
        ),
        hi: BytePos(
            69,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolType10.ts:7:1
  |
7 | s & 0;
  | ^

error: TS2363 {
    span: Span {
        lo: BytePos(
            79,
        ),
        hi: BytePos(
            80,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolType10.ts:8:5
  |
8 | 0 | s;
  |     ^

